# zetty

./: .gitignore  CMakeLists.txt  README.md
doc/: blocky_bits  blocky_bits.md  blocky_bits_md  gz-as-role-model.md  how_to_understand_comments.md  prelude_comments.md
include/: iztystream.hpp  oztystream.hpp  zettystream.hpp  ztystream.hpp  ztystreambuf.hpp
resources/: alpha.water  phi
src/: gzstream.cpp  iztystream.cpp  main.cpp  oztystream.cpp  zettystream.cpp  ztystream.cpp  ztystreambuf.cpp
